fix(kustomzdesign): invalid overflow axis: 'y'

--- a/packages/system/src/scss/abstracts/mixins/_overflow-scroll.scss
+++ b/packages/system/src/scss/abstracts/mixins/_overflow-scroll.scss
@@ -4,8 +4,9 @@
 /// ----------------------------------------------------------------------------
 
 /// Handles element overflow and adds support for momentum scrolling on iOS.
+/// @param {String} $axis [y] - x | y
 @mixin overflow-scroll($axis: y) {
-  @if ($axis != x or $axis != y) {
+  @if $axis != x and $axis != y {
     @error 'Invalid overflow axis: "#{$axis}"';
   }
 
